2005-11-14  Paolo Borelli  <pborelli@katamail.com>

	* gtksourceview/gtksourcelanguagesmanager.c: grab lang files from
	XDG_DATA_DIRS instead of the hardcoded install path. Bug #304147.

2005-11-14  Paolo Borelli  <pborelli@katamail.com>

	* gtksourceview/gtksourcebuffer.c: improve bracket matching: do the
	matching both if the bracket precedes the cursor and if follows it.
	If we have brackets on both sides, the match of the bracket following
	the cursor takes precedence. Bug #316020.

2005-11-14  Paolo Borelli  <pborelli@katamail.com>

	* gtksourceview/gtksourcebuffer.c (gtk_source_buffer_constructor):
	sync with the tag table if the caller specified one. Noticed by
	Joseph Turner, bug #321174.

2005-11-14  Paolo Borelli  <pborelli@katamail.com>

	* gtksourceview/gtksourceundomanager.c: improve action list freeing.

2005-11-14  Paolo Borelli  <pborelli@katamail.com>

	* gtksourceview/gtksourceiter.c (gtk_source_iter_forward_search):
	make limit an inclusive boundary. (#321300)

2005-11-14  Paolo Borelli  <pborelli@katamail.com>

	* gtksourceview/language-specs/fortran.lang: add missing keywords.
	Patch by Jerry DeLisle. See bug #317898.

2005-10-18  Nate Nielsen  <nielsen@memberwebs.com>

	* gtksourceview/language-specs/javascript.lang: Moved 
	'const' into keywords. See bug #317978

=== gtksourceview 1.4.2 ===

2005-10-03  Paolo Borelli  <pborelli@katamail.com>

	* configure.in:
	* README:
	* NEWS: release 1.4.2.

2005-09-06  Paolo Borelli  <pborelli@katamail.com>

	* gtksourceview/Makefile.am: add LDFLAGS = -no-undefined, for
	benefit of people compiling on win32. Suggested by
	yselkowitz@users.sourceforge.net, bug #314414.

=== gtksourceview 1.4.1 ===

2005-09-06  Paolo Borelli  <pborelli@katamail.com>

	* configure.in:
	* README:
	* NEWS: release 1.4.1 including the docs in the tarball.

=== gtksourceview 1.4.0 ===

2005-09-05  Paolo Borelli  <pborelli@katamail.com>

	* configure.in:
	* README:
	* NEWS: release 1.4.0.

=== gtksourceview 1.3.93 ===
