@@ -29,17 +29,15 @@
 #endif
 
 #include <string.h>
+#include <glib/gi18n.h>
 #include <gtk/gtk.h>
 
-#include "gtksourceview-i18n.h"
 #include "gtksourcebuffer.h"
 #include "gtksourcetag.h"
 #include "gtksourcetag-private.h"
-
 #include "gtksourceundomanager.h"
 #include "gtksourceview-marshal.h"
 #include "gtktextregion.h"
-
 #include "gtksourceiter.h"
 
 /*
