@@ -25,8 +25,9 @@
 
 #include <libxml/xmlreader.h>
 
+#include <glib/gi18n.h>
+
 #include "gtksourcelanguage-private.h"
-#include "gtksourceview-i18n.h"
 #include "gtksourcelanguage.h"
 #include "gtksourcetag.h"
 
