@@ -27,8 +27,10 @@
 #endif
 
 #include <glib.h>
+#include <glib/gi18n.h>
+
 #include "gtktextregion.h"
-#include "gtksourceview-i18n.h"
+
 
 #undef ENABLE_DEBUG
 /*
