@@ -1,5 +1,9 @@
 2005-11-14  Paolo Borelli  <pborelli@katamail.com>
 
+	* gtksourceview/*: use gi18n-lib.h and remove gtksourceview-i18n.[ch].
+
+2005-11-14  Paolo Borelli  <pborelli@katamail.com>
+
 	* gtksourceview/gtksourcelanguagesmanager.c: grab lang files from
 	XDG_DATA_DIRS instead of the hardcoded install path. Bug #304147.
 
